k3s/test/30-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami-svc
  namespace: test
spec:
  ports:
    - name: http
      port: 80
  selector:
    app: whoami
